Fixed too dark color on snackbar action

--- a/projects/edit/assets/styles/_variables.scss
+++ b/projects/edit/assets/styles/_variables.scss
@@ -1,4 +1,6 @@
+$primary-color: #ffffff;
 $accent-color: #002753;
+$blue-accent-color: #0087f4;
 
 $edit-ui-dialog-width: 100vw;
 $edit-ui-dialog-max-width: 800px;
