--- a/projects/edit/form/wrappers/adam-wrapper/adam-browser/adam-browser.component.scss
+++ b/projects/edit/form/wrappers/adam-wrapper/adam-browser/adam-browser.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../assets/styles/variables.scss";
 
 .metadata-exists {
-  color: #0087F4;
+  color: $blue-accent-color;
 }
 
 .adam-browse-background-icon {
